--- a/20170521_create_dataset_mrgsolve.Rmd
+++ b/20170521_create_dataset_mrgsolve.Rmd
@@ -27,6 +27,8 @@ Ref: https://github.com/metrumresearchgroup/mrgsolve
 
 ```{r}
 
+## Note that OMEGA and SIGMA are defined as variance, not deviations
+
 code <- "
 
 $SET delta=0.1
@@ -49,7 +51,7 @@ dxdt_CENT = KA*GUT - (CL/VD)*CENT;
 
 $TABLE
 double CP_IPRED = CENT/VD;
-double CP = CENT/VD * (1 + EPS(1));
+double CP = CENT/VD * exp(EPS(1));
 
 $CAPTURE CP CP_IPRED CL VD WT SEX
 "
@@ -151,6 +153,11 @@ out %>%
   select(ID,DOSE, WT, SEX) %>% 
   unique() %>% 
   write_csv("data/subj_dose_cov_20170521.csv")
+
+out %>% 
+  select(ID,DOSE, CL:SEX) %>% 
+  unique() %>% 
+  write_csv("data/subj_all_para_20170521.csv")
   
 ```
 
