Neither change of data nor trying with different constraints helped resolve label switching

--- a/code/20170521_create_dataset_mrgsolve.Rmd
+++ b/code/20170521_create_dataset_mrgsolve.Rmd
@@ -33,7 +33,7 @@ code <- "
 
 $SET delta=0.1
 
-$PARAM TVCL=0.3, TVVD=5, KA = 0.3, WT = 70, SEX = 1
+$PARAM TVCL=0.3, TVVD=5, KA = 1, WT = 70, SEX = 1
 
 $CMT GUT CENT
 
@@ -41,9 +41,9 @@ $MAIN
 double CL = exp(log(TVCL) + 0.75*log(WT/70)  + ETA(1));
 double VD = exp(log(TVVD) +      log(WT/70)  + ETA(2));
 
-$OMEGA 0.02 0.02
+$OMEGA 0.01 0.01
 
-$SIGMA 0.03
+$SIGMA 0.0225
 
 $ODE
 dxdt_GUT = -KA*GUT;
@@ -84,13 +84,21 @@ for(k in seq_along(dose_level)){
     mod %>%
     idata_set(cov_each) %>%
     ev(amt=dose_level[k]) %>%
-    mrgsim(end=48, delta=0.5) %>% 
+    mrgsim(end=24, delta=0.5) %>% 
     mutate(DOSE = dose_level[k],
            ID_each = ID-(k-1)*nsub_dose) %>% 
-    filter(time %in% c(0.5,1,2,4,6,8,12,24,48))
+    filter(time %in% c(0.25,0.5,1,2,4,6,8,12,24))
   
   out <- bind_rows(out, out_each)
 }
+
+## Plot to check sim profile
+out %>% 
+  filter(time>0) %>% 
+  ggplot(aes(time, CP, group=ID, color=factor(ID_each))) +
+  geom_line(aes(y=CP_IPRED)) +
+  geom_point() +
+  facet_wrap(~DOSE, scales = "free")
 
 ## Plot to check sim profile
 out %>% 
