--- a/code/20171024_stan_2_population.Rmd
+++ b/code/20171024_stan_2_population.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Stan analysis 3 - Population PK with multinormal"
+title: "Stan analysis 2 - Population PK, with or without IIV"
 author: "Kenta Yoshida"
 date: "`r Sys.Date()`"
 output: 
@@ -29,7 +29,6 @@ data.pk.plot <-
 
 # Summary
 
-Providing appropriate initial value resulted in a reasonable fit
 
 # Data quick look
 
@@ -45,19 +44,14 @@ data.pk.plot %>%
 ```
 
 
-# Model fit
+# Without IIV, limit Vd
 
 ```{r}
-
 init <- function(){
     list(KA = exp(rnorm(1, log(0.5), 0.2)),
          CL = exp(rnorm(1, log(0.5), 0.2)),
          VD = exp(rnorm(1, log(5), 0.2)),
-         omega = exp(rnorm(2, log(0.2), 0.5)),
-         rho = diag(2),
-         s_Y = runif(1, 0.5, 2),
-         CLVDi=matrix(rep(c(0.5,5), ea = nrow(data.subj)), 
-                      nrow = nrow(data.subj)))
+         s_Y = runif(1, 0.5, 2))
 }
 
 data <- 
@@ -69,9 +63,11 @@ data <-
        Y    = data.pk$CONC)
 
 fit.stan <-
-  stan(file = "mod_03_multinorm_2.stan", data = data, init=init)
-```
+  stan(file = "mod_01_noIIV.stan", 
+       data = data, init = init)
 
+fit.stan
+```
 
 ## Diagnostic plots
 
@@ -79,22 +75,14 @@ fit.stan <-
 # http://xavier-fim.net/packages/ggmcmc/#using-ggmcmc
 
 fit.param <- ggs(fit.stan)
-list.param.1 <- c("KA", "CL", "VD", "s_Y")
-list.param.2 <- c("Omega[1,1]", "Omega[2,2]", "Omega[1,2]", "cor")
+list.param <- c("KA", "CL", "VD", "s_Y")
 
 fit.param.plot <- 
-  fit.param %>% filter(Parameter %in% c(list.param.1,list.param.2))
-fit.param.plot.1 <- 
-  fit.param %>% filter(Parameter %in% list.param.1)
-fit.param.plot.2 <- 
-  fit.param %>% filter(Parameter %in% list.param.2)
+  fit.param %>% filter(Parameter %in% c(list.param))
 
-ggs_density(fit.param.plot.1)
-ggs_density(fit.param.plot.2)
-ggs_traceplot(fit.param.plot.1)
-ggs_traceplot(fit.param.plot.2)
-ggs_autocorrelation(fit.param.plot.1)
-ggs_autocorrelation(fit.param.plot.2)
+ggs_density(fit.param.plot)
+ggs_traceplot(fit.param.plot)
+ggs_autocorrelation(fit.param.plot)
 
 ggs_Rhat(fit.param.plot)
 ```
@@ -150,10 +138,121 @@ ggplot(dat.fit.plot.each.dose, aes(TIME, `50%`, color=DOSE_LEVEL)) +
 ```
 
 
-## Check covariates
+# With IIV
 
 ```{r}
+init <- function(){
+    list(KA = exp(rnorm(1, log(0.5), 0.2)),
+         CL = exp(rnorm(1, log(0.5), 0.2)),
+         VD = exp(rnorm(1, log(5), 0.2)),
+         s_CL= exp(rnorm(1, log(0.2), 0.5)),
+         s_VD= exp(rnorm(1, log(0.2), 0.5)),
+         s_Y = runif(1, 0.5, 2),
+         CLi = rep(0.5,nrow(data.subj)),
+         VDi = rep(5,  nrow(data.subj)))
+}
 
+data <- 
+  list(N    = nrow(data.pk),
+       N_ID = nrow(data.subj),
+       ID   = data.pk$ID,
+       TIME = data.pk$TIME,
+       DOSE = data.subj$DOSE,
+       Y    = data.pk$CONC)
+
+fit.stan <-
+  stan(file = "mod_02_withIIV.stan", 
+       data = data, init = init)
+
+fit.stan
+```
+
+## Diagnostic plots
+
+```{r}
+# http://xavier-fim.net/packages/ggmcmc/#using-ggmcmc
+
+fit.param <- ggs(fit.stan)
+list.param.1 <- c("KA", "CL", "VD")
+list.param.2 <- c("s_CL", "s_VD", "s_Y")
+
+fit.param.plot <- 
+  fit.param %>% filter(Parameter %in% c(list.param.1,list.param.2))
+fit.param.plot.1 <- 
+  fit.param %>% filter(Parameter %in% list.param.1)
+fit.param.plot.2 <- 
+  fit.param %>% filter(Parameter %in% list.param.2)
+
+ggs_density(fit.param.plot.1)
+ggs_density(fit.param.plot.2)
+ggs_traceplot(fit.param.plot.1)
+ggs_traceplot(fit.param.plot.2)
+ggs_autocorrelation(fit.param.plot.1)
+ggs_autocorrelation(fit.param.plot.2)
+
+ggs_Rhat(fit.param.plot)
+```
+
+## Prediction vs Observed
+### Individual parameter estimates (IPRED)
+
+```{r ref.label="plot pred vs obs"}
+```
+
+### Population parameter estimates + IIV
+
+```{r}
+mcmc.sample <- rstan::extract(fit.stan)
+
+# Plot for each subject
+y.pred.interval <- 
+  mcmc.sample$y_newPred %>% 
+  apply(MARGIN=2,quantile, prob=c(0.05, 0.5, 0.95)) %>% 
+  t() %>% 
+  tbl_df()
+
+bind_cols(data.pk,
+          y.pred.interval) %>% 
+  filter(ID<=9)  %>% 
+  mutate(ID=factor(ID)) %>% 
+  ggplot(aes(TIME, `50%`, color=ID)) +
+  facet_wrap(~ID) +
+  geom_line() +
+  geom_ribbon(aes(ymin=`5%`, ymax=`95%`, fill=ID),alpha=0.1) +
+  geom_point(data=data.pk %>% filter(ID<=9) %>% mutate(ID=factor(ID)),
+             aes(TIME,CONC)) +
+  ylab("CONC")
+
+
+# Plot for each dose level
+
+dat.fit.plot.each.dose <- 
+  ## Convert to tibble
+  mcmc.sample$y_newPred %>% t() %>% tbl_df() %>% 
+  ## Re-groupe predicted values according to TIME and DOSE_LEVEL
+  bind_cols(data.pk,.) %>% 
+  gather(key,prediction,-(ID:DOSE_LEVEL)) %>% 
+  group_by(TIME,DOSE_LEVEL) %>%
+  ## Calc quantiles
+  summarize(`5%` =quantile(prediction, probs=0.05),
+            `50%`=quantile(prediction, probs=0.5),
+            `95%`=quantile(prediction, probs=0.95)) %>% 
+  ungroup() %>% 
+  mutate(DOSE_LEVEL=factor(DOSE_LEVEL))
+
+ggplot(dat.fit.plot.each.dose, aes(TIME, `50%`, color=DOSE_LEVEL)) +
+  facet_wrap(~DOSE_LEVEL, scale="free") +
+  geom_line() +
+  geom_ribbon(aes(ymin=`5%`, ymax=`95%`),alpha=0.1) +
+  geom_line( data=data.pk.plot, aes(TIME,CONC,group=ID), linetype="dotted") +
+  geom_point(data=data.pk.plot, aes(TIME,CONC,group=ID)) +
+  ylab("CONC")
+```
+
+## Parameter distributions
+### Individual parameter estimates (IPRED)
+
+```{r}
 fit.CLi <- 
   summary(fit.stan, pars = c("CLi"))$summary %>% 
   tbl_df() %>% 
@@ -168,12 +267,44 @@ fit.indiv.params <-
             fit.CLi %>% rename(CL=mean),
             fit.VDi %>% rename(VD=mean))
 
-
 fit.indiv.params %>% 
   ggplot(aes(CL,VD)) +
   geom_point() +
   geom_smooth(method="lm")
+```
 
+### Population parameter estimates + IIV
+
+```{r}
+mcmc.sample <- rstan::extract(fit.stan)
+
+fit.CLiPred <- mcmc.sample$CLiPred[1,] 
+fit.VDiPred <- mcmc.sample$VDiPred[1,] 
+
+
+fit.indiv.params.pred <-
+  tibble(CL = fit.CLiPred,
+         VD = fit.VDiPred)
+
+fit.indiv.params.pred %>% 
+  ggplot(aes(CL,VD)) +
+  geom_point() +
+  geom_smooth(method="lm")
+```
+
+### Combined plot
+
+```{r}
+bind_rows(fit.indiv.params %>% mutate(TYPE="Estimates"),
+          fit.indiv.params.pred %>% mutate(TYPE="Predicted")) %>% 
+  ggplot(aes(CL,VD,color=TYPE, fill=TYPE)) +
+  geom_point() +
+  geom_smooth(method="lm", alpha=0.1)
+```
+
+## Check covariates
+
+```{r}
 
 data.cov <- read_csv("../data/subj_dose_cov_20170521.csv") 
 
@@ -195,7 +326,3 @@ fit.indiv.params.cov %>%
 
 
 ```
-
-
-
-
